// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DialogReplyPost - Snapshots > matches snapshot 1`] = `
<div
  class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl py-6 shadow-sm rounded-md py-0"
  data-slot="card"
  data-testid="card"
>
  <div
    class="px-6 p-6 flex flex-col gap-4"
    data-slot="card-content"
  >
    <div
      data-testid="post-header"
    >
      snapshot-post-id
    </div>
    <div
      data-testid="post-content"
    >
      snapshot-post-id
    </div>
  </div>
</div>
`;

exports[`DialogReplyPost - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl py-6 shadow-sm rounded-md py-0 test-class"
  data-slot="card"
  data-testid="card"
>
  <div
    class="px-6 p-6 flex flex-col gap-4"
    data-slot="card-content"
  >
    <div
      data-testid="post-header"
    >
      snapshot-post-id
    </div>
    <div
      data-testid="post-content"
    >
      snapshot-post-id
    </div>
  </div>
</div>
`;
